# kyiv-traffic-bigdata

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  settings.py
air-alerts/: API_docs.md
data/: kpt_positions_20260207.jsonl  kpt_routes_20260207.jsonl
docs/: data-sources.md
eway/docs/: README.md
eway/pipeline/: __init__.py  extract.py  ws_interceptor.py
google-routes/: API_docs.md
kpt/: visualize.py
kpt/docs/: poller.md
kpt/poller/: Dockerfile.poller  __init__.py  __main__.py  cloudflare.py  config.py  docker-compose.yml  interceptor.py  models.py  parsers.py  poller.py  protocols.py  session.py  websocket_client.py  writer.py
kpt/poller/data/: kpt_positions_20260125.jsonl  kpt_routes_20260125.jsonl  vehicle_map.html
kpt/poller/data/remote/: kpt_routes_20260207.jsonl
kpt/scraper/: Dockerfile.scraper  docker-compose.yml  kpt_scraper.py  ws_interceptor.js
kpt/scraper/data/: kpt_data_20260124_112559.json  kpt_data_20260124_121557.json
kpt/templates/: vehicle_map.html
open-street-map/data/: traffic_signals_20260124_113829.geojson
open-street-map/docs/: README.md
open-street-map/pipeline/: importer.py
weather/docs/: API_docs.md  README.md
weather/pipeline/: __init__.py  extract.py
