[project]
name = "kyiv-traffic-data"
version = "0.1.0"
description = "ETL pipelines for Kyiv traffic data from multiple APIs"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.9.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "gtfs-realtime-bindings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "ruff>=0.4.0"]
